<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.FragmentWallet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coinbase_email"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/amber_50"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/font1"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Wallet_EdtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:maxLength="500"
            android:maxLines="1"
            android:hint="@string/your_email"
            android:singleLine="true"
            android:textColor="@color/blue_grey_300"
            android:theme="@style/EditText.Grey" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/attention"
            android:textColor="@color/amber_50"
            android:textSize="17sp"
            android:fontFamily="@font/font1"
            android:layout_margin="20dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/Wallet_Btn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:layout_gravity="center"
            android:fontFamily="@font/font1"
            android:textColor="@color/white" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />


        <ImageView
            android:layout_width="290dp"
            android:layout_height="280dp"
            android:src="@drawable/phone_wallet"
            android:layout_gravity="center"/>

    </LinearLayout>


</RelativeLayout>