<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.FragmentHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_wallet"
                app:tint="@color/amber_500" />

            <Space
                android:layout_width="@dimen/spacing_large"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/dogecoinBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0000000"
                android:textSize="24sp"
                android:textColor="@color/amber_50"
                android:fontFamily="@font/font1"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/miningBtn"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:background="@drawable/cpu_btn"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/multiMiningBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boost_2"
            android:textColor="@color/amber_50"
            android:textSize="12sp"
            android:background="@drawable/btn_shape_capsule"
            android:fontFamily="@font/font1"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xlarge"/>

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:textColor="@color/amber_50"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_large"
            android:fontFamily="@font/font1"
            android:visibility="invisible"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id"
        android:layout_marginBottom="@dimen/spacing_large"/>

</RelativeLayout>